--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>AcademyCheck - Helps to find best </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta content="Choose easily your best coaching" name="keywords">
+    <meta content="Choose easily your best coaching" name="description">
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
     <!-- Google Font -->
@@ -34,13 +34,11 @@
     <div class="nav-bar">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-                <img 
-               class="logo" src="./img/AC.jpg">
+                <a href="more.html"><img class="logo" src="./img/AC.jpg"></a>
                 <a href="#" class="navbar-brand black">AcademyCheck</a>
                 <button type="button" class="navbar-toggler red" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav mr-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
