--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
                         <!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
                     </div>
                     <div class="ml-auto">
-                        <a class="btn btn-custom" style="padding: 0px 30px 0;" href="#">Sign In</a>
+                        <!-- <a class="btn btn-custom" style="padding: 0px 30px 0;" href="#">Sign In</a> -->
+                        <button class="btn btn-light">Sign In</button>
                     </div>
                 </div>
             </nav>
         </div>
     </div>
+
+  
     <!-- Nav Bar End -->
 
 
