--- a/list.html
+++ b/list.html
@@ -34,7 +34,11 @@
     <div class="nav-bar">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-                <a href="#" class="navbar-brand">MENU</a>
+                <a href="more.html"><img class="logo" src="./img/AC.jpg"></a>
+                <a href="#" class="navbar-brand black">AcademyCheck</a>
+                <button type="button" class="navbar-toggler red" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
