--- a/more.html
+++ b/more.html
@@ -148,7 +148,7 @@
                                 <img src="./img/1i.png">
                             </div>
                             <div class="whitee ">
-                                <h1 class="h3">
+                                <h1 class="h3 coName">
                                     Mother’s Pride High School&nbsp;<small>(MPHS DW17),</small> Dwarka</h1>
                                 <div class="d-flex align-items-center color1">
                                     <i class="bi bi-bookmark-plus-fill text-light pl-5 color1"></i> &nbsp; Pocket 2
