--- a/list.html
+++ b/list.html
@@ -62,7 +62,7 @@
                         <!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
                     </div>
                     <div class="ml-auto">
-                        <a class="btn btn-custom" href="#">Sign In</a>
+                        <button class="btn btn-light">Sign In</button>
                     </div>
                 </div>
             </nav>
