--- a/more.html
+++ b/more.html
@@ -22,10 +22,10 @@
 <body>
 
     <section id="fixed_nav">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light px-5 fixed-top mb-5">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light px-2 fixed-top mb-5">
             <div class="container-fluid d-flex align-items-center">
-                <a class="navbar-brand text-dark" href="javascript:void(0)"><img class="logo"
-                        src="./img/AC.jpg">AcademyCheck</a>
+                <a class="navbar-brand text-dark d-flex align-items-center" href="index.html"><img class="logo"
+                        src="./img/AC.jpg"><h3 class="h22 m-1">AcademyCheck</h3></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
