--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <section id="fixed_nav">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light px-1 fixed-top mb-5 py-3">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light px-2 fixed-top">
             <div class="container-fluid ">
                 <a class="navbar-brand text-dark d-flex align-items-center" href="index.html"><img class="logo"
                         src="./img/AC.jpg">
@@ -38,7 +38,7 @@
 
 
 
-                    <div class="collapse navbar-collapse m-3" id="mynavbar">
+                    <div class="collapse navbar-collapse m-1" id="mynavbar">
                         <div class="dropdown">
                             <button type="button"
                                 class="btn dropdown-toggle border-top-0 border-left-0 border-right-0 rounded-0 px-3 border-bottom"
@@ -95,7 +95,7 @@
 
     </section>
     <section id="scroll_nav " class=" nb">
-        <div class="banner d-flex justify-content-center align-items-center flex-column r_center">
+        <div class="banner d-flex justify-content-center align-items-center r_center">
             <div class="">
                 <h1 style="color: white;">The Coaching Admissions Platform, Jaipur</h1>
                 <!-- <form class="d-flex rounded my-2 ">
@@ -106,7 +106,7 @@
                 <div class="d-flex rounded my-2 ">
                     <input class="form-control" type="search" placeholder="Search coaching..." aria-label="Search">
                     <a href="list.html"> <button class="btn btn-danger" type="submit"> <span><i
-                                    class="bi-arrow-right-circle-fill"></i></span>Search</button></a>
+                                    class="bi-search"></i></span>Search</button></a>
                 </div>
                 <div class="rightt">
                     <p style="color: white;" class="font-weight-semibold text-light d-inline-block mb-auto mt-1"><i
@@ -494,32 +494,32 @@
 
                 <div class="row px-1">
                     <div class="col-sm-2 mx-3">
-                        <img src="./img/blog-1.jpg" class="similer">
+                        <img src="./img/cc.jpeg" class="similer">
                         <div class="py-2">
                             <p class="pp">Krishna mandir coaching, vivek vihar</p>
                         </div>
                     </div>
 
                     <div class="col-sm-2 mx-3">
-                        <img src="./img/blog-1.jpg" class="similer">
+                        <img src="./img/cc.jpeg" class="similer">
                         <div class="py-2">
                             <p class="pp">Krishna mandir coaching, vivek, vihar</p>
                         </div>
                     </div>
                     <div class="col-sm-2 mx-3">
-                        <img src="./img/blog-1.jpg" class="similer">
+                        <img src="./img/cc.jpeg" class="similer">
                         <div class="py-2">
                             <p class="pp">Krishna mandir coaching, vivek vihar metro station</p>
                         </div>
                     </div>
                     <div class="col-sm-2 mx-3">
-                        <img src="./img/blog-1.jpg" class="similer">
+                        <img src="./img/cc.jpeg " class="similer">
                         <div class="py-2">
                             <p class="pp">Krishna mandir coaching, vivek vihar metro station</p>
                         </div>
                     </div>
                     <div class="col-sm-2 mx-3">
-                        <img src="./img/blog-1.jpg" class="similer">
+                        <img src="./img/cc.jpeg" class="similer">
                         <div class="py-2">
                             <p class="pp">Krishna mandir coaching, vivek vihar metro station</p>
                         </div>
