--- a/more.html
+++ b/more.html
@@ -21,7 +21,7 @@
 
 <body>
     <section id="fixed_nav">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light px-2 fixed-top mb-5">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light px-2 fixed-top">
             <div class="container d-flex align-items-center">
                 <a class="navbar-brand text-dark d-flex align-items-center" href="index.html"><img class="logo"
                         src="./img/AC.jpg">
@@ -153,13 +153,13 @@
                                 <h1 class="h3 coName">
                                     Mother’s Pride High School&nbsp;<small>(MPHS DW17),</small> Dwarka</h1>
                                 <div class="d-flex align-items-center color1">
-                                    <i class="bi bi-bookmark-plus-fill text-light pl-5 color1"></i> &nbsp; Pocket 2
+                                    <i class="bi-geo-alt-fill"></i> &nbsp; Pocket 2
                                     Institutional area, Sector 17, Dawrka, South West Delhi &nbsp;
                                     <button type="button" class="btn btn-outline-light px-3 btn-sm hide1">
-                                        <i class="bi bi-bookmark-plus-fill text-light"></i>Show on map
+                                        <i class="bi-geo-alt-fill"></i>Show on map
                                     </button>
                                 </div>
-                                <div class="d-flex"> <i class="bi bi-bookmark-plus-fill text-light pl-5 hide1"></i>
+                                <div class="d-flex"> <i class="bi-geo-alt-fill"></i>
                                     &nbsp;
                                     1234</div>
                             </div>
@@ -770,12 +770,13 @@
                                                 <li><a class="dropdown-item" href="#">Link 3</a></li>
                                             </ul>
                                         </span></div>
-                                        <span class="col-sm-4 text-success px-3 justify-content-end rightt">
-                                            <span class="bodr3 mx-1">
+                                        <span class="col-sm-4 text-success px-1 ">
+                                            <div class="flot"><span class="bodr3 mx-3">
                                                 9
                                             </span> <span class="">
                                                 Ongoing
-                                            </span>
+                                            </span></div>
+                                            
                                         </span>
                                     </span>
 
@@ -1281,16 +1282,16 @@
 
                                     </div>
                                     <div class="row px-1 py-1">
-                                        <div class="col-sm-3 px-1 py-1"> <img src="./img/carousel-1.jpg"
+                                        <div class="col-sm-3 px-1 py-1"> <img src="./img/cc.jpeg"
                                                 style="width: 200px; height: 200px;">
                                         </div>
-                                        <div class="col-sm-3 px-1 py-1"> <img src="./img/carousel-1.jpg"
+                                        <div class="col-sm-3 px-1 py-1"> <img src="./img/cc.jpeg"
                                                 style="width: 200px; height: 200px;">
                                         </div>
-                                        <div class="col-sm-3 px-1 py-1"> <img src="./img/carousel-1.jpg"
+                                        <div class="col-sm-3 px-1 py-1"> <img src="./img/cc.jpeg"
                                                 style="width: 200px; height: 200px;">
                                         </div>
-                                        <div class="col-sm-3 px-1 py-1"> <img src="./img/carousel-1.jpg"
+                                        <div class="col-sm-3 px-1 py-1"> <img src="./img/cc.jpeg"
                                                 style="width: 200px; height: 200px;">
                                         </div>
 
@@ -1375,14 +1376,14 @@
             <h2 class="h22 py-2">Nearby Coachings</h2>
             <div class="row px-1">
                 <div class="col-sm-4">
-                    <img src="./img/blog-1.jpg" class="similer">
+                    <img src="./img/cc.jpeg" class="similer">
                     <div class="py-2 nb">
                         <p>Krishna mandir coaching, vivek <br>vihar metro station</p>
                     </div>
                 </div>
 
                 <div class="col-sm-4">
-                    <img src="./img/blog-1.jpg" class="similer">
+                    <img src="./img/cc.jpeg" class="similer">
                     <div class="py-2 nb">
                         <p>Krishna mandir coaching, vivek <br>vihar metro station</p>
                     </div>
