--- a/list.html
+++ b/list.html
@@ -24,7 +24,7 @@
 
 <body>
     <section id="fixed_nav">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light px-2 fixed-top mb-5">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light px-2 fixed-top">
             <div class="container d-flex align-items-center">
                 <a class="navbar-brand text-dark d-flex align-items-center" href="index.html"><img class="logo"
                         src="./img/AC.jpg">
@@ -158,10 +158,10 @@
                                 <h1 class="h3 coName">
                                     Mother’s Pride High School&nbsp;<small>(MPHS DW17),</small> Dwarka</h1>
                                 <div class="d-flex align-items-center color1">
-                                    <i class="bi bi-bookmark-plus-fill text-light pl-5 color1"></i> &nbsp; Pocket 2
+                                    <i class="bi-geo-alt-fill"></i>&nbsp; Pocket 2
                                     Institutional area, Sector 17, Dawrka, South West Delhi &nbsp;
                                     <button type="button" class="btn btn-outline-light px-3 btn-sm hide1">
-                                        <i class="bi bi-bookmark-plus-fill text-light"></i>Show on map
+                                        <i class="bi-geo-alt-fill"></i>Show on map
                                     </button>
                                 </div>
                                 <!-- <div class="d-flex"> <i class="bi bi-bookmark-plus-fill text-light pl-5 hide1"></i>
