--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 <body>
     <section id="fixed_nav">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light px-2 fixed-top">
+        <nav class="navbar navbar-expand-sm  bg-white px-2 fixed-top ">
             <div class="container-fluid ">
                 <a class="navbar-brand text-dark d-flex align-items-center" href="index.html"><img class="logo"
                         src="./img/AC.jpg">
                     <h3 class="h22 m-1">AcademyCheck</h3>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="bi-border-width" style="color: black;"></i></span>
                 </button>
                 <!-- mobile view  -->
                 <div class="collapse navbar-collapse hide_nav" id="mynavbar">
@@ -433,7 +433,9 @@
                 <div class="col-sm-4 py-2 ">
                     <div class="border">
                         <div class="d-flex">
-                            <div class="bg-white text-center"><br>
+                            <div class="bg-white1
+                            
+                            text-center"><br>
                                 <img src="./img/1i.png" style="width: 50px; height:50px"><br>
                                 <b>St. coaching</b><br>
                                 <small>vivek vihar metor station</small>
@@ -451,7 +453,7 @@
                 <div class="col-sm-4 py-2">
                     <div class="border ">
                         <div class="d-flex">
-                            <div class=" bg-white text-center"><br>
+                            <div class=" bg-white1 text-center"><br>
                                 <img src="./img/1i.png" style="width: 50px; height:50px"><br>
                                 <b>St. coaching</b><br>
                                 <small>vivek vihar metor station</small>
@@ -469,7 +471,7 @@
                 <div class="col-sm-4 py-2">
                     <div class="border">
                         <div class="d-flex">
-                            <div class=" bg-white text-center"><br>
+                            <div class=" bg-white1 text-center"><br>
                                 <img src="./img/1i.png" style="width: 50px; height:50px"><br>
                                 <b>St. coaching</b><br>
                                 <small>vivek vihar metor station</small>
