--- a/more.html
+++ b/more.html
@@ -21,7 +21,7 @@
 
 <body>
     <section id="fixed_nav">
-        <nav class="navbar navbar-expand-sm bg-white shadow-sm px-2 fixed-top py-4">
+        <nav class="navbar navbar-expand-sm bg-white shadow-sm px-2 fixed-top ">
             <div class="container d-flex align-items-center">
                 <a class="navbar-brand text-dark d-flex align-items-center" href="index.html" href="javascript:void(0)"><img class="logo"
                         src="./img/AC.jpg">
