--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <p class="text-muted font-1">AcademyCheck brings you the best of schools and everything about
                     it</p>
             </div>
-            <div class="imgSlide container">
+            <div class="container">
                 <div class="d-flex owl">
 
                     <div class="col-sm-3">
@@ -584,7 +584,7 @@
         </div>
 
     </section>
-  
+
 </body>
 <script>
     $(".slider").owlCarousel({
@@ -598,21 +598,21 @@
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script>$('.owl-carousel').owlCarousel({
-    loop:true,
-    margin:10,
-    nav:true,
-    responsive:{
-        0:{
-            items:1
-        },
-        600:{
-            items:3
-        },
-        1000:{
-            items:5
+        loop: true,
+        margin: 10,
+        nav: true,
+        responsive: {
+            0: {
+                items: 1
+            },
+            600: {
+                items: 3
+            },
+            1000: {
+                items: 5
+            }
         }
-    }
-})</script>
+    })</script>
 
 
 </html>
