--- a/more.html
+++ b/more.html
@@ -179,33 +179,34 @@
             </div>
         </div>
         <!-- responsive website -->
-                   <div class="row mt-3 hide_btns">
-                    <div class="col-2 my-1">
-                        <div class="co_logo1">
-                            <img src="./img/1i.png" class="border">
-                        </div>
-                    </div>
-                    <div class="col-10">
-                            <h1 class="h6">
-                                Mother’s Pride High School</h1>
-                            <div class=" color1">
-                                <i class="bi bi-bookmark-plus-fill text-light color1"></i> &nbsp; Pocket 2
-                                Institutional area, Sector 17
-                            </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn btn-outline-secondary btn-sm">
-                                <i class="bi-square"></i> Compare
-                            </button><button type="button" class="btn btn-outline-primary btn-sm mx-1">
-                                <i class="bi-bell"></i>Notify Me
-                            </button><button type="button" class="btn btn-outline-danger btn-sm">
-                                <i class="bi-heart"></i> Shortlist
-                            </button>
-                        </div>
-                    </div>
-                    <div class="color2">
-                        <div class="px-4"><b>varifed coaching</b></div>
-                    </div>
+        <div class="px-2">   <div class="row mt-3 hide_btns">
+            <div class="col-2">
+                <div class="co_logo1">
+                    <img src="./img/1i.png" class="border">
                 </div>
+            </div>
+            <div class="col-10 mr-3">
+                    <h1 class="h6">
+                        Mother’s Pride High School</h1>
+                    <div class=" color1">
+                        <i class="bi bi-bookmark-plus-fill text-light color1"></i> &nbsp; Pocket 2
+                        Institutional area, Sector 17
+                    </div>
+                <div class="mt-3">
+                    <button type="button" class="btn btn-outline-secondary btn-sm">
+                        <i class="bi-square"></i> Compare
+                    </button><button type="button" class="btn btn-outline-primary btn-sm mx-1">
+                        <i class="bi-bell"></i>Notify Me
+                    </button><button type="button" class="btn btn-outline-danger btn-sm">
+                        <i class="bi-heart"></i> Shortlist
+                    </button>
+                </div>
+            </div>
+            <div class="color2">
+                <div class="px-4"><b>varifed coaching</b></div>
+            </div>
+        </div></div>
+                
               
     </section>
     <section id="content">
@@ -944,8 +945,8 @@
                                     </ul>
 
                                     <div class="childEligibility bg-white border-top border-muted py-3">
-                                        <div class="row align-items-center ">
-                                            <div class="col-sm-9 align-items-center d-flex">
+                                        <div class="row d-flex align-items-center ">
+                                            <div class="col-sm-8 align-items-center d-flex">
                                                 <div class="m-1"><img src="./img/1i.png" style="height: 80px;">
                                                 </div>
                                                 <div class="">
@@ -954,7 +955,7 @@
                                                         will let you know <br>about your child eligibility</p>
                                                 </div>
                                             </div>
-                                            <div class="col-sm-3 student"><button class="btn btn-primary w-100">+Add
+                                            <div class="col-sm-4 m-3"><button class="btn btn-primary" style="width: 300px;">+Add
                                                     Student Details</button>
                                             </div>
                                         </div>
@@ -1322,7 +1323,7 @@
                                         <h2 class="h22">Address & Contact</h2>
                                     </div>
                                     <div class="row py-3">
-                                        <div class="col-5">
+                                        <div class="col-sm-5">
                                             <ul class="list-unstyled mb-1">
                                                 <li class=" d-flex align-items-center">
                                                     <i class="bi-geo-alt-fill"></i><span class="p-3 break-word">
