--- a/more.html
+++ b/more.html
@@ -179,35 +179,37 @@
             </div>
         </div>
         <!-- responsive website -->
-        <div class="px-2">   <div class="row mt-3 hide_btns">
-            <div class="col-2">
-                <div class="co_logo1">
-                    <img src="./img/1i.png" class="border">
+        <div class="px-2">
+            <div class="row mt-3 hide_btns">
+                <div class="col-2">
+                    <div class="co_logo1">
+                        <img src="./img/1i.png" class="border">
+                    </div>
                 </div>
-            </div>
-            <div class="col-10 mr-3">
+                <div class="col-10 mr-3">
                     <h1 class="h6">
                         Mother’s Pride High School</h1>
                     <div class=" color1">
                         <i class="bi bi-bookmark-plus-fill text-light color1"></i> &nbsp; Pocket 2
                         Institutional area, Sector 17
                     </div>
-                <div class="mt-3">
-                    <button type="button" class="btn btn-outline-secondary btn-sm">
-                        <i class="bi-square"></i> Compare
-                    </button><button type="button" class="btn btn-outline-primary btn-sm mx-1">
-                        <i class="bi-bell"></i>Notify Me
-                    </button><button type="button" class="btn btn-outline-danger btn-sm">
-                        <i class="bi-heart"></i> Shortlist
-                    </button>
+                    <div class="mt-3">
+                        <button type="button" class="btn btn-outline-secondary btn-sm">
+                            <i class="bi-square"></i> Compare
+                        </button><button type="button" class="btn btn-outline-primary btn-sm mx-1">
+                            <i class="bi-bell"></i>Notify Me
+                        </button><button type="button" class="btn btn-outline-danger btn-sm">
+                            <i class="bi-heart"></i> Shortlist
+                        </button>
+                    </div>
+                </div>
+                <div class="color2">
+                    <div class="px-4"><b>varifed coaching</b></div>
                 </div>
             </div>
-            <div class="color2">
-                <div class="px-4"><b>varifed coaching</b></div>
-            </div>
-        </div></div>
-                
-              
+        </div>
+
+
     </section>
     <section id="content">
         <div class="main_container">
@@ -297,11 +299,11 @@
                             <!-- card2-->
                             <div class="card2 admissionForm">
                                 <div class="w-100 mb-3 rounded bg-white shadow-sm">
-                                    <div class=" pt-3  px-3">
+                                    <div class="px-4 d-flex align-items-center justify-content-between">
                                         <span class="d-flex align-items-center">
                                             <h2 class="h22">Online Admission Form</h2>
-                                            <span class="px-1"> <i class="bi bi-bookmark-plus-fill text-primary"></i>
-                                                <small class="h7 ">
+                                            <span class=" pll"> <i class="bi bi-bookmark-plus-fill text-primary"></i>
+                                                <small class="h7">
                                                     How AC works
                                                 </small></span>
                                         </span>
@@ -361,7 +363,7 @@
                             </div>
                             <div class="card3 key">
                                 <div class="w-100 mb-3 rounded bg-white shadow-sm">
-                                    <div class="px-4 mt-5 pt-3 d-flex justify-content-between align-items-center">
+                                    <div class="px-4 mt-5 pt-4 d-flex justify-content-between align-items-center">
                                         <div class="">
                                             <h2 class="h22">Key Coaching Stats
                                                 <h2>
@@ -463,7 +465,7 @@
                             </div>
                             <div class="card4 feeStrure">
                                 <div class="w-100  mb-3 rounded bg-white shadow-sm eligibilityDropdown position-sticky">
-                                    <div class="px-4 mt-5 pt-3 d-flex justify-content-between align-items-center">
+                                    <div class="px-4 mt-5 pt-4 d-flex justify-content-between align-items-center">
                                         <h2 class="h22">Fee Struture</h2>
                                         <div class="dropdown right ">
                                             <button class="btn btn-outline-secondary dropdown-toggle btn-sm"
@@ -634,7 +636,7 @@
                             <div class="card5 Academic">
                                 <div
                                     class="w-100 justify-content-between align-items-center rounded bg-white shadow-sm eligibilityDropdown position-sticky">
-                                    <div class="px-4 mt-5 pt-3 w-100 d-block">
+                                    <div class="px-4 mt-5 pt-4 w-100 d-block">
                                         <h2 class="h22">Academic Stats
                                             <h2>
                                     </div>
@@ -699,7 +701,7 @@
                             <div class="card6 Dates">
                                 <div
                                     class="w-100  mb-3  rounded bg-white shadow-sm eligibilityDropdown position-sticky">
-                                    <div class="px-4 mt-5 pt-3 d-flex justify-content-between align-items-center">
+                                    <div class="px-4 mt-5 pt-4 d-flex justify-content-between align-items-center">
                                         <h2 class="h22">Admission Dates</h2>
                                         <div class="dropdown right ">
                                             <button class="btn btn-outline-secondary dropdown-toggle btn-sm"
@@ -768,7 +770,7 @@
                                                 in Delhi for
                                             </span> <span class="dropdown px-1">
                                                 <button type="button"
-                                                    class="btn dropdown-toggle border-top-0 border-left-0 border-right-0 bg-white rounded-0 px-0 pt-2 pb-1 border-bottom btn-sm"
+                                                    class="btn dropdown-toggle border-top-0 border-left-0 border-right-0 bg-white rounded-0 px-0 border-bottom btn-sm"
                                                     data-bs-toggle="dropdown">
                                                     <span>2022-2023</span>
                                                 </button>
@@ -778,7 +780,7 @@
                                                     <li><a class="dropdown-item" href="#">Link 3</a></li>
                                                 </ul>
                                             </span></div>
-                                        <span class="col-sm-4 text-success ">
+                                        <span class="col-sm-4 text-success">
                                             <div class="flot"><span class="bodr3 px-1">
                                                     9
                                                 </span> <span class="px-2">
@@ -839,7 +841,7 @@
                             </div>
                             <div class="card7 Criteria">
                                 <div class="w-100  mb-3 rounded bg-white shadow-sm">
-                                    <div class="row px-4 mt-5 pt-3 d-flex align-items-center">
+                                    <div class="row px-4 mt-5 pt-4 d-flex align-items-center">
                                         <h2 class="col-sm-8 h22">Admission Criteria & Eligiblity</h2>
 
                                         <div class="dropdown col-sm-2">
@@ -955,7 +957,8 @@
                                                         will let you know <br>about your child eligibility</p>
                                                 </div>
                                             </div>
-                                            <div class="col-sm-4 m-3"><button class="btn btn-primary" style="width: 300px;">+Add
+                                            <div class="col-sm-4 d-flex justify-content-center"><button class="btn btn-primary"
+                                                    style="width: 300px;">+Add
                                                     Student Details</button>
                                             </div>
                                         </div>
@@ -1001,7 +1004,7 @@
                             <div class="card8 Hall">
                                 <div
                                     class="w-100 px-4 mt-5 mb-3 rounded bg-white shadow-sm eligibilityDropdown position-sticky">
-                                    <div class="w-100 py-3  align-items-center">
+                                    <div class="w-100 py-3 pt-4 align-items-center">
                                         <h2 class="h22">Hall Of Fame</h2>
                                     </div>
                                     <div id="togglemenu" class="">
@@ -1052,7 +1055,7 @@
                             </div>
                             <div class="card9 Results">
                                 <div
-                                    class="w-100 px-4 mt-5 pt-3 rounded mb-3 bg-white shadow-sm eligibilityDropdown position-sticky">
+                                    class="w-100 px-4 mt-5 pt-4 rounded mb-3 bg-white shadow-sm eligibilityDropdown position-sticky">
                                     <div class="w-100 align-items-center">
                                         <h2 class="h22">Coaching Results</h2>
                                     </div>
@@ -1065,7 +1068,7 @@
                             </div>
                             <div class="card10 Facilities">
                                 <div
-                                    class="w-100 mb-3 rounded px-4 mt-5 pt-3 bg-white shadow-sm eligibilityDropdown position-sticky">
+                                    class="w-100 mb-3 rounded px-4 mt-5 pt-4 bg-white shadow-sm eligibilityDropdown position-sticky">
                                     <div class="row w-100 align-items-center d-flex justify-content-between">
                                         <h2 class="col-sm-6 h22 py-3 wiFull">Facilities</h2>
                                         <span class="col-sm-6 three d-flex justify-content-center p-1 ">
@@ -1199,7 +1202,7 @@
                             </div>
                             <div class="card11 Comparison">
                                 <div
-                                    class="w-100 mb-3 rounded mt-5 pt-3 bg-white shadow-sm eligibilityDropdown position-sticky">
+                                    class="w-100 mb-3 rounded mt-5 pt-4 bg-white shadow-sm eligibilityDropdown position-sticky">
                                     <div class="d-flex justify-content-between border-bottom px-4">
                                         <div class="d-flex py-1">
                                             <img src="./img/1i.png" style="height: 50px;">
@@ -1273,7 +1276,7 @@
                             </div>
                             <div class="card12 Gallery">
                                 <div
-                                    class="w-100 mb-3 rounded mt-5 py-3 px-4 bg-white shadow-sm eligibilityDropdown position-sticky">
+                                    class="w-100 mb-3 rounded mt-5 py-3 px-4 pt-4 bg-white shadow-sm eligibilityDropdown position-sticky">
                                     <div class="d-flex justify-content-between">
                                         <div class="d-flex py-1">
                                             <h2 class="h22">Gallery</h2>
@@ -1317,7 +1320,7 @@
                             </div>
                             <div class="card13 Contact">
                                 <div
-                                    class="w-100 mb-3 rounded mt-5 py-3 px-4 bg-white shadow-sm eligibilityDropdown position-sticky">
+                                    class="w-100 mb-3 rounded mt-5 py-3 px-4 pt-4 bg-white shadow-sm eligibilityDropdown position-sticky">
                                     <div class="d-flex justify-content-between">
 
                                         <h2 class="h22">Address & Contact</h2>
