--- a/more.html
+++ b/more.html
@@ -186,7 +186,7 @@
                         <img src="./img/1i.png" class="border">
                     </div>
                 </div>
-                <div class="col-10 mr-3">
+                <div class="col-10 mr-4">
                     <h1 class="h6">
                         Mother’s Pride High School</h1>
                     <div class=" color1">
@@ -300,9 +300,9 @@
                             <div class="card2 admissionForm">
                                 <div class="w-100 mb-3 rounded bg-white shadow-sm">
                                     <div class="px-4 d-flex align-items-center justify-content-between">
-                                        <span class="d-flex align-items-center">
-                                            <h2 class="h22">Online Admission Form</h2>
-                                            <span class=" pll"> <i class="bi bi-bookmark-plus-fill text-primary"></i>
+                                        <span class="d-flex">
+                                            <span><h2 class="h22">Online Admission Form</h2></span>
+                                            <span class=" pll d-block"> <i class="bi bi-bookmark-plus-fill text-primary"></i>
                                                 <small class="h7">
                                                     How AC works
                                                 </small></span>
