--- a/more.html
+++ b/more.html
@@ -186,7 +186,7 @@
                         <img src="./img/1i.png" class="border">
                     </div>
                 </div>
-                <div class="col-10 mr-4">
+                <div class="col-10 pll2">
                     <h1 class="h6">
                         Mother’s Pride High School</h1>
                     <div class=" color1">
@@ -203,7 +203,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="color2">
+                <div class="color2 shadow-sm">
                     <div class="px-4"><b>varifed coaching</b></div>
                 </div>
             </div>
@@ -298,7 +298,7 @@
 
                             <!-- card2-->
                             <div class="card2 admissionForm">
-                                <div class="w-100 mb-3 rounded bg-white shadow-sm">
+                                <div class="w-100 mb-3 mt-5 rounded bg-white shadow-sm">
                                     <div class="px-4 d-flex align-items-center justify-content-between">
                                         <span class="d-flex">
                                             <span><h2 class="h22">Online Admission Form</h2></span>
