--- a/more.html
+++ b/more.html
@@ -948,13 +948,13 @@
 
                                     <div class="childEligibility bg-white border-top border-muted py-3">
                                         <div class="row d-flex align-items-center ">
-                                            <div class="col-sm-8 align-items-center d-flex">
+                                            <div class="col-sm-8 align-items-center d-flex py-3">
                                                 <div class="m-1"><img src="./img/1i.png" style="height: 80px;">
                                                 </div>
                                                 <div class="">
                                                     <h6 class="h7">Check Age Eligibility for your Child</h6>
-                                                    <p class="font-1 small">Please add the child details and we
-                                                        will let you know <br>about your child eligibility</p>
+                                                    <small class="font-1 small">Please add the child details and we
+                                                        will let you know about your child eligibility</small>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4 d-flex justify-content-center"><button class="btn btn-primary"
