--- a/more.html
+++ b/more.html
@@ -95,7 +95,7 @@
                                             href="javascript:void(0)"></a><i class="bi-cart-fill text-big1"></i>
                                         <span class="small-heading align-items-center">Cart</span>
                                     </span></a>
-                                    <button class="btn btn-primary" type="button">Sign Inn</button>
+                                    <button class="btn btn-primary" type="button">Sign In</button>
                                 </div>
                             </form>
                         </div>
