--- a/more.html
+++ b/more.html
@@ -300,9 +300,12 @@
                             <div class="card2 admissionForm">
                                 <div class="w-100 mb-3 mt-5 rounded bg-white shadow-sm">
                                     <div class="px-4 d-flex align-items-center justify-content-between">
-                                        <span class="d-flex">
-                                            <span><h2 class="h22">Online Admission Form</h2></span>
-                                            <span class=" pll d-block"> <i class="bi bi-bookmark-plus-fill text-primary"></i>
+                                        <span class="d-flex align-items-center">
+                                            <span>
+                                                <h2 class="h22">Online Admission Form</h2>
+                                            </span>
+                                            <span class=" pll d-block"> <i
+                                                    class="bi bi-bookmark-plus-fill text-primary"></i>
                                                 <small class="h7">
                                                     How AC works
                                                 </small></span>
@@ -947,18 +950,18 @@
                                     </ul>
 
                                     <div class="childEligibility bg-white border-top border-muted py-3">
-                                        <div class="row d-flex align-items-center ">
+                                        <div class="row d-flex align-items-center px-4">
                                             <div class="col-sm-8 align-items-center d-flex py-3">
                                                 <div class="m-1"><img src="./img/1i.png" style="height: 80px;">
                                                 </div>
                                                 <div class="">
-                                                    <h6 class="h7">Check Age Eligibility for your Child</h6>
+                                                    <h7 class="h7">Check Age Eligibility for your Child</h7>
                                                     <small class="font-1 small">Please add the child details and we
                                                         will let you know about your child eligibility</small>
                                                 </div>
                                             </div>
-                                            <div class="col-sm-4 d-flex justify-content-center"><button class="btn btn-primary"
-                                                    style="width: 300px;">+Add
+                                            <div class="col-sm-4 d-flex justify-content-center"><button
+                                                    class="btn btn-primary" style="width: 300px;">+Add
                                                     Student Details</button>
                                             </div>
                                         </div>
@@ -1202,8 +1205,8 @@
                             </div>
                             <div class="card11 Comparison">
                                 <div
-                                    class="w-100 mb-3 rounded mt-5 pt-4 bg-white shadow-sm eligibilityDropdown position-sticky">
-                                    <div class="d-flex justify-content-between border-bottom px-4">
+                                    class="w-100 mb-3 py-4 rounded mt-5 pt-4 px-4 bg-white shadow-sm eligibilityDropdown position-sticky">
+                                    <div class="d-flex justify-content-between border-bottom">
                                         <div class="d-flex py-1">
                                             <img src="./img/1i.png" style="height: 50px;">
                                             <div class="align-items-center">
@@ -1211,67 +1214,71 @@
                                                 <p class="small text-muted">(Mother pride school(dwarka)</p>
                                             </div>
                                         </div>
-                                        <div class="right d-flex align-items-center px-4"> <button
+                                        <div class="right d-flex align-items-center"> <button
                                                 class="btn btn-danger mx-1"></button>
                                             <button class="btn btn-success "></button>
                                         </div>
-
                                     </div>
-                                    <div class="row px-4">
-                                        <div class="col-sm-3 m-1">
-                                            <div class=" border p-1">
-                                                <div class="d-flex align-items-center">
-                                                    <div> <img src="./img/1i.png" style="height: 50px;"></div>
+                                    <div class="row mt-3">
+                                        <div class="row d-flex owl">
+                                            <div class="col-sm-3">
+                                                <div class=" border p-1">
+                                                    <div class="d-flex align-items-center">
+                                                        <div> <img src="./img/1i.png" style="height: 50px;"></div>
 
-                                                    <div class="align-items-center"> <small class="">Popular Comparisons
-                                                            with</small><br>
-                                                        <p class="small text-muted">Mother pride school(dwarka)</p>
+                                                        <div class="align-items-center"> <small class="">Popular
+                                                                Comparisons
+                                                                with</small><br>
+                                                            <p class="small text-muted">Mother pride school(dwarka)</p>
+                                                        </div>
+
                                                     </div>
-
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="col-sm-3 m-1">
-                                            <div class=" border p-1">
-                                                <div class="d-flex align-items-center">
-                                                    <div> <img src="./img/1i.png" style="height: 50px;"></div>
+                                            <div class="col-sm-3">
+                                                <div class=" border p-1">
+                                                    <div class="d-flex align-items-center">
+                                                        <div> <img src="./img/1i.png" style="height: 50px;"></div>
 
-                                                    <div class="align-items-center"> <small class="">Popular Comparisons
-                                                            with</small><br>
-                                                        <p class="small text-muted">Mother pride school(dwarka)</p>
+                                                        <div class="align-items-center"> <small class="">Popular
+                                                                Comparisons
+                                                                with</small><br>
+                                                            <p class="small text-muted">Mother pride school(dwarka)</p>
+                                                        </div>
+
                                                     </div>
-
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="col-sm-3 m-1">
-                                            <div class=" border p-1">
-                                                <div class="d-flex align-items-center">
-                                                    <div> <img src="./img/1i.png" style="height: 50px;"></div>
+                                            <div class="col-sm-3">
+                                                <div class=" border p-1">
+                                                    <div class="d-flex align-items-center">
+                                                        <div> <img src="./img/1i.png" style="height: 50px;"></div>
 
-                                                    <div class="align-items-center"> <small class="">Popular Comparisons
-                                                            with</small><br>
-                                                        <p class="small text-muted">Mother pride school(dwarka)</p>
+                                                        <div class="align-items-center"> <small class="">Popular
+                                                                Comparisons
+                                                                with</small><br>
+                                                            <p class="small text-muted">Mother pride school(dwarka)</p>
+                                                        </div>
+
                                                     </div>
-
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="col-sm-3 m-1">
-                                            <div class=" border p-1">
-                                                <div class="d-flex align-items-center">
-                                                    <div> <img src="./img/1i.png" style="height: 50px;"></div>
+                                            <div class="col-sm-3">
+                                                <div class="border p-1">
+                                                    <div class="d-flex align-items-center">
+                                                        <div> <img src="./img/1i.png" style="height: 50px;"></div>
 
-                                                    <div class="align-items-center"> <small class="">Popular Comparisons
-                                                            with</small><br>
-                                                        <p class="small text-muted">Mother pride school(dwarka)</p>
+                                                        <div class="align-items-center"> <small class="">Popular
+                                                                Comparisons
+                                                                with</small><br>
+                                                            <p class="small text-muted">Mother pride school(dwarka)</p>
+                                                        </div>
+
                                                     </div>
-
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
                             <div class="card12 Gallery">
@@ -1350,7 +1357,7 @@
 
                                         </div>
                                         <div class="col-7 hide1">
-                                            <img class="mx-auto d-block" src="./img/map.png" style="width:50%">
+                                            <img class="mx-auto d-block" src="./img/map.png" style="width:100%">
                                         </div>
                                     </div>
                                 </div>
