--- a/list.html
+++ b/list.html
@@ -4,43 +4,40 @@
 <head>
     <meta charset="utf-8">
     <title>AcademyCheck - Helps to find best</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/more.css" rel="stylesheet">
-    <link href="css/first.css" rel="stylesheet">
+    <!-- <link href="css/first.css" rel="stylesheet"> -->
     <link href="css/list.css" rel="stylesheet">
     <link href="css/more_resp.css" rel="stylesheet">
-    <link href="css/owl_min.css" rel="stylesheet">
-    <link href="css/owl_theme.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link
         href="https://fonts.bunny.net/css?family=montserrat:200,300,400,500,700|nunito-sans:200,200i,300,300i,400,400i,600,700,800,900|open-sans:300,400,500,800"
         rel="stylesheet" />
     <!-- Favicon -->
 </head>
-
 <body>
-   
     <section id="fixed_nav">
-        <nav class="navbar navbar-expand-sm bg-white shadow-sm px-2 fixed-top">
+        <nav class="navbar navbar-expand-sm bg-white shadow-sm px-2 fixed-top ">
             <div class="container d-flex align-items-center">
-                <a class="navbar-brand text-dark d-flex align-items-center" href="index.html" href="javascript:void(0)"><img class="logo"
-                        src="./img/AC.jpg">
+                <a class="navbar-brand text-dark d-flex align-items-center" href="index.html"
+                    href="javascript:void(0)"><img class="logo" src="./img/AC.jpg">
                     <h3 class="h22 m-1">AcademyCheck</h3>
                 </a>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-                    <span class="navbar-toggler-icon" ><i class="bi-border-width" style="color: black;"></i></span>
-                  </button>
+                    <span class="navbar-toggler-icon"><i class="bi-border-width" style="color: black;"></i></span>
+                </button>
                 <div class="collapse navbar-collapse " id="mynavbar">
                     <div class="headerSearch d-flex w-100">
                         <div class="w-25">
                             <div class="dropdown">
                                 <button class="btn btn-outline-secondary dropdown-toggle" type="button"
                                     id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                  Jaipur
+                                    Jaipur
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                     <li><a class="dropdown-item" href="#">Action</a></li>
@@ -50,7 +47,8 @@
                             </div>
                         </div>
                         <div class="w-50 main-search  ">
-                            <input class="form-control maSe" type="search" placeholder="Search" aria-label="Search">
+                            <input class="form-control maSe" type="search" placeholder="Search Coaching by name.."
+                                aria-label="Search">
 
                         </div>
                         <form class="w-25 d-flex hide1">
@@ -59,12 +57,12 @@
                                         class="bi-cart-fill text-big1"></i>
                                     <span class="small-heading align-items-center">Cart</span>
                                 </span></a>
-                            <button class="btn btn-primary" type="button">Sign In</button>
+                            <button class="btn btn-outline-primary" type="button">Sign In</button>
                         </form>
                     </div>
-                 
+
                     <div class="hide_nav">
-                        <div class="container ">
+                        <div class="container">
 
                             <div class="collapse navbar-collapse" id="mynavbar">
                                 <ul class="navbar-nav me-auto">
@@ -91,15 +89,16 @@
                                     </li>
                                 </ul>
                             </div>
-                             <form class=""> <div>  
-                                <!-- <input class="form-control me-2" type="text" placeholder="Search"> -->
-                               <span
-                                        class="align-items-center px-3 ml-5">  <a class="nav-link" href="javascript:void(0)"></a><i class="bi-cart-fill text-big1"></i>
+                            <form class="">
+                                <div>
+                                    <!-- <input class="form-control me-2" type="text" placeholder="Search"> -->
+                                    <span class="align-items-center px-3 ml-5"> <a class="nav-link"
+                                            href="javascript:void(0)"></a><i class="bi-cart-fill text-big1"></i>
                                         <span class="small-heading align-items-center">Cart</span>
                                     </span></a>
-                                <button class="btn btn-primary" type="button">Sign Inn</button></div>
+                                    <button class="btn btn-primary" type="button">Sign In</button>
+                                </div>
                             </form>
-                        
                         </div>
                     </div>
                 </div>
